--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 #######
 # SITE SETTINGS
 #
-title: bootstrap-template
-description: "a basic bootstrap template for Jekyll with GitHub Pages"
-year: 2020
-author: evan will 
+title: CVPR-test
+description: "CVPR-test"
+year: 2022
+author: Paula Ramos
 # add search box to navbar, true/false
 search: true
 
